Add TEARDROP class functions to KiCAD source
Now you can select a PCB segment and pick a menu to create a teardrop
for the segment. This is just a mock up and this function works for segment-to-via joits only.

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -335,6 +335,7 @@ set( PCB_COMMON_SRCS
     ../pcbnew/class_track.cpp
     ../pcbnew/class_zone.cpp
     ../pcbnew/class_zone_settings.cpp
+    ../pcbnew/class_teardrop.cpp
     ../pcbnew/classpcb.cpp
     ../pcbnew/ratsnest_data.cpp
     ../pcbnew/ratsnest_viewitem.cpp
