--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -336,6 +336,7 @@ set( PCB_COMMON_SRCS
     ../pcbnew/class_zone.cpp
     ../pcbnew/class_zone_settings.cpp
     ../pcbnew/class_teardrop.cpp
+    ../pcbnew/edit_teardrops.cpp
     ../pcbnew/classpcb.cpp
     ../pcbnew/ratsnest_data.cpp
     ../pcbnew/ratsnest_viewitem.cpp
